--- a/index2.html
+++ b/index2.html
@@ -1,40 +1,179 @@
-function diagnose() {
-  warningDiv.textContent = '';
-  resultDiv.style.display = 'none';
-
-  if (selectedSymptoms.length === 0) {
-    warningDiv.textContent = '请至少选择一个症状进行诊断';
-    return;
-  }
-
-  let bestMatch = null;
-  let matchedPrescription = null;
-
-  Object.entries(symptomsData).forEach(([syndrome, data]) => {
-    const matches = selectedSymptoms.filter((s) => data.symptoms.includes(s)).length;
-
-    if (matches >= 2) {
-      bestMatch = syndrome;
-      matchedPrescription = Object.values(data.prescriptions)[0];
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>中医诊断系统 v1.1</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      margin: 0;
+      padding: 20px;
     }
-  });
+    h1, h2 {
+      text-align: center;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    .symptoms {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-bottom: 20px;
+    }
+    .symptoms label {
+      display: flex;
+      align-items: center;
+      font-size: 16px;
+    }
+    .symptoms input[type="checkbox"] {
+      margin-right: 10px;
+    }
+    .btn-diagnose {
+      display: block;
+      width: 100%;
+      padding: 10px 20px;
+      background-color: #4caf50;
+      color: white;
+      text-align: center;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .result {
+      margin-top: 20px;
+      background: #f9f9f9;
+      padding: 20px;
+      border-radius: 8px;
+      border-left: 5px solid #4caf50;
+    }
+    .warning {
+      color: red;
+      margin-top: 20px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>中医诊断系统</h1>
+    <p class="version">系统版本：v1.1</p>
+    <h2>请选择您的症状：</h2>
+    <div class="symptoms" id="symptoms-container">
+      <label><input type="checkbox" value="恶寒"> 我感到怕冷（恶寒）</label>
+      <label><input type="checkbox" value="发热"> 我感到发热</label>
+      <label><input type="checkbox" value="无汗"> 我无汗</label>
+      <label><input type="checkbox" value="有汗"> 我有汗</label>
+      <label><input type="checkbox" value="口渴"> 我口渴</label>
+      <label><input type="checkbox" value="便秘"> 我便秘</label>
+      <label><input type="checkbox" value="腹满"> 我腹胀</label>
+    </div>
+    <button class="btn-diagnose" onclick="diagnose()">诊断</button>
+    <p class="warning" id="warning"></p>
+    <div class="result" id="result" style="display: none;"></div>
+  </div>
 
-  if (matchedPrescription) {
-    resultDiv.style.display = 'block';
-    resultDiv.innerHTML = `
-      <h3>诊断结果：</h3>
-      <p>证型：${bestMatch}</p>
-      <p>推荐方剂：${matchedPrescription.name}</p>
-      <p>组成：</p>
-      <ul>
-        ${matchedPrescription.herbs
-          .map((herb) => `<li>${herb.name}：${herb.amount}</li>`)
-          .join('')}
-      </ul>
-      <p>用法：${matchedPrescription.usage}</p>
-      <p>说明：${matchedPrescription.description}</p>
-    `;
-  } else {
-    warningDiv.textContent = '未匹配到具体诊断，请重新选择症状';
-  }
-}
+  <script>
+    const symptomsData = {
+      表证: {
+        symptoms: ['恶寒', '发热', '无汗', '有汗'],
+        prescriptions: {
+          麻黄汤: {
+            name: '麻黄汤',
+            herbs: [
+              { name: '麻黄', amount: '9克' },
+              { name: '桂枝', amount: '6克' },
+              { name: '杏仁', amount: '9克' },
+              { name: '甘草', amount: '3克' },
+            ],
+            usage: '将药材加水煎煮30分钟，分两次服用，温服。',
+            description: '用于太阳表实证，症见发热恶寒，无汗而喘。',
+          },
+          桂枝汤: {
+            name: '桂枝汤',
+            herbs: [
+              { name: '桂枝', amount: '9克' },
+              { name: '芍药', amount: '9克' },
+              { name: '甘草', amount: '6克' },
+              { name: '生姜', amount: '9克' },
+              { name: '大枣', amount: '3枚' },
+            ],
+            usage: '将药材加水煎煮30分钟，分两次服用，温服。',
+            description: '用于太阳表虚证，症见发热汗出，恶风。',
+          },
+        },
+      },
+      里证: {
+        symptoms: ['发热', '口渴', '便秘', '腹满'],
+        prescriptions: {
+          大承气汤: {
+            name: '大承气汤',
+            herbs: [
+              { name: '大黄', amount: '12克' },
+              { name: '厚朴', amount: '9克' },
+              { name: '枳实', amount: '9克' },
+              { name: '芒硝', amount: '6克' },
+            ],
+            usage: '将药材加水煎煮40分钟，趁热服用一次。',
+            description: '用于阳明腑实证，症见便秘、腹满。',
+          },
+        },
+      },
+    };
+
+    function diagnose() {
+      const selectedSymptoms = Array.from(document.querySelectorAll('.symptoms input:checked')).map(
+        (checkbox) => checkbox.value
+      );
+
+      const warningDiv = document.getElementById('warning');
+      const resultDiv = document.getElementById('result');
+      warningDiv.textContent = '';
+      resultDiv.style.display = 'none';
+
+      if (selectedSymptoms.length === 0) {
+        warningDiv.textContent = '请至少选择一个症状进行诊断';
+        return;
+      }
+
+      let bestMatch = null;
+      let matchedPrescription = null;
+
+      Object.entries(symptomsData).forEach(([type, data]) => {
+        const matches = selectedSymptoms.filter((s) => data.symptoms.includes(s)).length;
+        if (matches >= 2) {
+          bestMatch = type;
+          matchedPrescription = Object.values(data.prescriptions)[0];
+        }
+      });
+
+      if (matchedPrescription) {
+        resultDiv.style.display = 'block';
+        resultDiv.innerHTML = `
+          <h3>诊断结果：</h3>
+          <p>证型：${bestMatch}</p>
+          <p>推荐方剂：${matchedPrescription.name}</p>
+          <p>组成：</p>
+          <ul>
+            ${matchedPrescription.herbs
+              .map((herb) => `<li>${herb.name}：${herb.amount}</li>`)
+              .join('')}
+          </ul>
+          <p>用法：${matchedPrescription.usage}</p>
+          <p>说明：${matchedPrescription.description}</p>
+        `;
+      } else {
+        warningDiv.textContent = '未匹配到具体诊断，请重新选择症状';
+      }
+    }
+  </script>
+</body>
+</html>
