--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>中医诊断系统 v1.1</title>
+  <title>中医诊断系统（感冒） v1.1</title>
   <style>
     body {
       font-family: Arial, sans-serif;
