--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>中医诊断系统</h1>
+    <h1>中医诊断系统（感冒）</h1>
     <p class="version">系统版本：v1.1 | 开发时间：2025年1月</p>
     <h2>请选择症状：</h2>
     <div class="symptoms" id="symptoms-container">
